--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 22:05:02 2018</p>
+         Last Run: Sat Nov 24 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>19</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>59</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSW</td>
-                        <td>20</td>
+                        <td>S</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "16",
-                 "20"
+                 "17",
+                 "18",
+                 "23"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 22:05:02 2018</p>
+         Last Run: Sat Nov 24 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>77</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>15</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>82</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>19</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>81</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
-                 "5"
+                 "15",
+                 "19"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "78",
-                 "78"
+                 "82",
+                 "80",
+                 "79"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
-                 "82",
-                 "81"
+                 "87",
+                 "90",
+                 "89"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 22:05:02 2018</p>
+         Last Run: Sat Nov 24 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,35 +464,35 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>88</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>10</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>89</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>5</td>
-                        <td>91</td>
+                        <td>4</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-9",
+                 "-7",
                  "-9"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-4",
-                 "-5",
+                 "-4",
                  "-5"
                ]
              }
@@ -592,7 +592,7 @@
                "data":[
                  "5",
                  "5",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "89",
-                 "91"
+                 "85",
+                 "87",
+                 "89"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "11",
-                 "12"
+                 "15",
+                 "14",
+                 "14"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 22:05:02 2018</p>
+         Last Run: Sat Nov 24 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
