--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 23:05:02 2018</p>
+         Last Run: Sun Nov 25 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>0</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>17</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>1</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SSW</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>S</td>
-                        <td>23</td>
+                        <td>6</td>
+                        <td>SSW</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "61",
-                 "59"
+                 "62",
+                 "63",
+                 "61"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
+                 "14",
                  "18",
-                 "23"
+                 "25"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 23:05:02 2018</p>
+         Last Run: Sun Nov 25 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,26 +246,26 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>5</td>
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>87</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>15</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>90</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>19</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "-2",
+                 "-3",
+                 "-3",
                  "-2"
                ]
              },
@@ -316,8 +316,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
-                 "1",
+                 "0",
+                 "0",
                  "1"
                ]
              }
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "80",
-                 "79"
+                 "81",
+                 "80"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "90",
-                 "89"
+                 "88",
+                 "91",
+                 "88"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 23:05:02 2018</p>
+         Last Run: Sun Nov 25 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,38 +461,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>85</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>7</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>87</td>
+                        <td>7</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>4</td>
-                        <td>89</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>7</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-6",
                  "-7",
-                 "-7",
-                 "-9"
+                 "-7"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-3",
                  "-4",
-                 "-4",
-                 "-5"
+                 "-4"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "4"
+                 "7",
+                 "7",
+                 "7"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "87",
-                 "89"
+                 "80",
+                 "81",
+                 "85"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "14",
-                 "14"
+                 "16",
+                 "16",
+                 "16"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 23:05:02 2018</p>
+         Last Run: Sun Nov 25 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -675,19 +675,31 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>66</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>69</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>4</td>
+                        <td>63</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>44</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
@@ -695,19 +707,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>61</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
-                        <td>5</td>
-                        <td>64</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>NNW</td>
-                        <td>53</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-5"
+                 "-6"
                ]
              },
              {
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
+                 "4",
+                 "4",
                  "5"
                ]
              },
@@ -818,7 +818,7 @@
                "data":[
                  "66",
                  "63",
-                 "64"
+                 "63"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "61",
-                 "53"
+                 "55",
+                 "44",
+                 "35"
                ]
              }
            ]
