--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 01:05:02 2018</p>
+         Last Run: Sun Nov 25 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -31,9 +31,9 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-2</td>
-                        <td>2</td>
+                        <td>-1</td>
+                        <td>-3</td>
+                        <td>1</td>
                         <td>64</td>
                         <td>1</td>
                         <td>6</td>
@@ -46,11 +46,11 @@
                         <td>1</td>
                         <td>-1</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SSW</td>
-                        <td>19</td>
+                        <td>SW</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-1",
                  "0"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "-1",
                  "1",
                  "2"
                ]
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "2"
                ]
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "64",
-                 "64",
+                 "63",
                  "63"
                ]
              },
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "17",
-                 "19",
+                 "20",
                  "25"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 01:05:02 2018</p>
+         Last Run: Sun Nov 25 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>15</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -273,7 +273,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>19</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "81",
-                 "80"
+                 "80",
+                 "78"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 01:05:02 2018</p>
+         Last Run: Sun Nov 25 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -488,7 +488,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
+                 "82",
                  "85",
-                 "87"
+                 "88"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
+                 "14",
                  "13",
                  "12"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 01:05:02 2018</p>
+         Last Run: Sun Nov 25 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -679,35 +679,35 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>55</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>61</td>
+                        <td>3</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>44</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
-                        <td>-6</td>
-                        <td>5</td>
-                        <td>60</td>
+                        <td>-5</td>
+                        <td>3</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>N</td>
-                        <td>34</td>
+                        <td>8</td>
+                        <td>NNW</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-6"
+                 "-5"
                ]
              },
              {
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "4",
-                 "5"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "61",
-                 "60"
+                 "66",
+                 "63",
+                 "61"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "44",
-                 "34"
+                 "31",
+                 "25",
+                 "21"
                ]
              }
            ]
